# doccano

./: 404.html  README.md  TODO.md  app.json  heroku.yml  index.html  lefthook.yml  sitemap.xml
.github/workflows/: ci.yml  codeql-analysis.yml  docs-deployment.yml  issue-comment.yml  mkdocs-deployment.yml  publish-image.yml  pypi-publish.yml  test-installation.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
advanced/auto_labelling_config/: index.html
advanced/aws_https_settings/: index.html
advanced/compose_quickstart/: index.html
advanced/internationalization/: index.html
advanced/oauth2_settings/: index.html
backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/api/: urls.py
backend/auto_labeling/tests/: test_views.py
backend/config/: urls.py
backend/config/settings/: base.py
backend/data_export/pipeline/: dataset.py  formatters.py  writers.py
backend/data_export/tests/: test_dataset.py  test_formatters.py  test_task.py  test_writer.py
backend/data_import/pipeline/: makers.py  readers.py
backend/data_import/tests/: test_label.py  test_labels.py  test_makers.py  test_reader.py
backend/examples/tests/: test_filters.py  test_usecase.py  utils.py
backend/label_types/tests/: test_models.py  utils.py
backend/labels/: models.py
backend/labels/migrations/: 0001_initial.py  0015_create_boundingbox_table.py
backend/labels/tests/: test_bbox.py  test_span.py  test_views.py  utils.py
backend/metrics/: tests.py
backend/projects/tests/: test_member.py
backend/src/: manage.py
backend/src/api/migrations/: 0019_auto_20211124_0506.py
backend/src/config/settings/: base.py
backend/src/data_export/pipeline/: dataset.py  formatters.py
backend/src/data_export/tests/: test_labels.py  test_models.py
backend/src/data_import/pipeline/: makers.py
backend/src/data_import/tests/: test_label_types.py
backend/src/examples/tests/: test_models.py
backend/src/labels/tests/: test_category.py  test_relation.py  test_text_label.py
backend/src/projects/tests/: utils.py
developer_guide/: index.html
docker/: Containerfile  Containerfile.nginx  Containerfile.prod  compose.prod.yml  docs_docker-quickstart_Version2.md
docs/: CONTRIBUTING.md  developer_guide.md  faq.md  index.md  install_and_upgrade_doccano.md  requirements.txt
docs/advanced/: compose_quickstart.md
faq/: index.html
frontend/: .gitignore  README.md  nuxt.config.ts  package.json  turbo.json
frontend/app/: app.vue
frontend/app/composables/: useExampleItem.ts  useLabelList.ts  useProjectItem.ts  useTeacherList.ts  useTextLabel.ts
frontend/app/layouts/: demo.vue  error.vue  projects.vue  workspace.vue
frontend/app/middleware/: can-access-labels.ts  check-admin.ts  check-auth.ts  is-text-project.ts  isProjectAdmin.ts  set-project.ts  setCurrentProject.ts
frontend/app/pages/: auth.vue
frontend/app/plugins/: repositories.ts  utils.ts  vue-konva.ts  vue-shortkey.ts  vuetify.ts
frontend/app/presenter/: linkToAnnotationPage.ts
frontend/app/rules/: index.ts
install_and_upgrade_doccano/: index.html
nuxt-app/: README.md  nuxt.config.ts  package.json
roadmap/: index.html
setup_cloud_storage/: index.html
tools/: create-package.sh
tutorial/: index.html
(+520 files in other folders)
