[project]
name = "doccano"
version = "1.8.5"
description = "doccano, text annotation tool for machine learning practitioners"
authors = ["Hironsan <hiroki.nakayama.py@gmail.com>","newtondotcom <redacted@mail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://doccano.github.io/doccano/"
repository = "https://github.com/doccano/doccano"
documentation = "https://doccano.github.io/doccano/"
requires-python = ">=3.12"
dependencies = [
    "auto-labeling-pipeline>=0.1.23",
    "celery>=5.6.3",
    "chardet>=7.4.3",
    "dj-database-url>=3.1.2",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-celery-results>=2.6.0",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.9.0",
    "django-drf-filepond>=0.5.2",
    "django-health-check>=4.4.2", # to properly integrate
    "django-polymorphic>=4.11.5",
    "django-rest-polymorphic>=0.1.10",
    "djangorestframework>=3.17.1",
    "djangorestframework-filters==1.0.0.dev2", # this module is outdated
    "djangorestframework-xml>=2.0.0",
    "drf-spectacular[sidecar]>=0.29.0",
    "drf-yasg[validation]>=1.21.15",
    "environs>=15.0.1",
    "filetype>=1.2.0",
    "furl>=2.1.4",
    "pandas>=3.0.3",
    "pyexcel>=0.7.5",
    "pyexcel-xlsx>=0.6.1",
    "seqeval>=1.2.2",
    "sqlalchemy>=2.0.51",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "model-bakery>=1.23.5",
    "taskipy>=1.14.1",
    "unittest-xml-reporting>=4.0.0",
]
prod = [
    "gunicorn>=26.0.0",
]

[tool.taskipy.tasks]
# mypy = "mypy --namespace-packages --explicit-package-bases ."
wait_for_db = "uv run manage.py wait_for_db"
test = "uv run manage.py test --pattern=\"test*.py\""
migrate = "uv run manage.py migrate"
collectstatic = "uv run manage.py collectstatic --noinput"
